--- a/projectCRM/appCRM/templates/record.html
+++ b/projectCRM/appCRM/templates/record.html
@@ -13,12 +13,14 @@
       <p class="card-text"><strong>Address: </strong>{{ customer_record.address }}</p>
       <p class="card-text"><strong>State: </strong>{{ customer_record.state }}</p>
       <p class="card-text"><strong>Zipcode: </strong>{{ customer_record.zipcode }}</p>
-      <p class="card-text">{<strong>Created at: </strong>{ customer_record.created_at }}</p>
+      <p class="card-text"><strong>Created at: </strong>{{ customer_record.created_at }}</p>
       <p class="card-text"><strong>City: </strong>{{ customer_record.city }}</p>
       <p class="card-text"><strong>ID: </strong>{{ customer_record.id }}</p>
     </div>
   </div>
 <br><br>
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+<a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+<a href="{% url 'Update_record' customer_record.id %}" class="btn btn-danger">Update</a>
 
 {% endblock content %}
